Fix button spacing

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -5,6 +5,8 @@ body {
    background-color:#000020;
 }
 
+
+
 .navbar-brand {
    padding-top: 0px;
    padding-left:  75px;
@@ -49,4 +51,8 @@ body {
 
 .hide {
    display: none;
+}
+
+.btn-primary {
+   margin: 0 5px;
 }
